--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -330,7 +330,7 @@
             <div class="form-field">
               <label>Version Tag</label>
               <input [(ngModel)]="schema.version" placeholder="e.g., v1.0, beta, stable" [ngModelOptions]="{standalone: true}">
-              <small class="field-help">Version tag can only be set during creation and cannot be changed later.</small>
+              <small class="field-help">Version tag can be changed at any time.</small>
             </div>
 
             <hr class="section-divider">
