--- a/src/app/config-validator-box.component.html
+++ b/src/app/config-validator-box.component.html
@@ -15,11 +15,11 @@
       {{ overallStatus === 'success' ? 'Config file validation successful' : 'Config file validation failed' }}
     </span>
   </div>
-  <div class="file-name-row" *ngIf="formName">
+  <div class="file-name-row centered" *ngIf="formName">
     <span class="file-name">
       {{ formName }}
       <span class="version-info">
-        <input [(ngModel)]="templateVersion" placeholder="FW Version" style="width: 60px; margin-left: 4px;" />
+        {{ templateVersion || 'FW Version' }}
       </span>
     </span>
   </div>
